# anno

./: .gitignore  Cargo.toml  io.github.jmdaemon.anno.json  main.rs  main2.rs  meson.build
data/: io.github.jmdaemon.anno.appdata.xml.in  io.github.jmdaemon.anno.desktop.in  io.github.jmdaemon.anno.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
resources/gtk/: anno.cmb  mainwidget.ui  window.ui
src/: anno.gresource.xml  anno.rs  application.rs  filesidebar.rs  fileview.rs  lib.rs  main.rs  mainwidget.rs  meson.build  pageobject.rs  window.rs
src/ui/: appwindow.slint
